tests/algorithms/x/Clojure/machine_learning/sequential_minimum_optimization.error
run: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/machine_learning/sequential_minimum_optimization.clj:88:2180).
Can only recur from tail position

Full report at:
/tmp/clojure-508401976240893655.edn
